# uge

./: .gitignore  CMakeLists.txt  README.md
cmake/: filter.cmake  folder.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/coreMath/: CMakeLists.txt  build.h  coreMathPublic.h
src/core/coreMath/_module/: coreMathApi.h
src/core/coreMath/math/: eulerAngles.cpp  eulerAngles.h  eulerAngles.inl  mathUtils.h  simdUtils.h  simdUtils.inl  vector2.inl  vector3.h  vector3.inl  vector4.h
src/core/coreMath/math/box/: box.cpp  box.h  box.inl
src/core/coreMath/math/color/: color.cpp  color.h  color.inl
src/core/coreMath/math/eulerAngles/: eulerAngles.cpp  eulerAngles.h  eulerAngles.inl
src/core/coreMath/math/float16/: float16.h  float16.inl
src/core/coreMath/math/matrix/: matrix.cpp  matrix.h  matrix.inl
src/core/coreMath/math/plane/: plane.h  plane.inl
src/core/coreMath/math/quaternion/: quaternion.h  quaternion.inl
src/core/coreMath/math/segment/: segment.cpp  segment.h  segment.inl
src/core/coreMath/math/vector/: vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
src/core/coreSystem/: CMakeLists.txt  build.h  coreSystemPublic.h  crt.h  crt.inl
src/core/coreSystem/_module/: coreSystemApi.h
src/core/coreSystem/debugging/: CAssert.cpp  CAssert.h  CStackTrace.cpp  CStackTrace.h  dbgUtils.cpp  dbgUtils.h
src/core/coreSystem/file/: file.cpp  file.h
src/core/coreSystem/log/: log.cpp  log.h  logDebugSink.cpp  logDebugSink.h  logFileSink.cpp  logFileSink.h  logQueue.h  logQueue.inl  logSink.cpp  logSink.h  logThread.cpp  logThread.h
src/core/coreSystem/settings/: compiler.h  settings.h  types.h
src/core/coreSystem/threads/: atomic.h  atomic.inl  readWriteSpinLock.cpp  readWriteSpinLock.h  readWriteSpinLock.inl  threads.cpp  threads.h  threads.inl
src/games/: CMakeLists.txt
src/games/testGame/: CMakeLists.txt  build.h
src/games/testGame/core/: ugeMain.cpp  ugeMain.h
src/tests/: CMakeLists.txt
src/tests/unitTestCoreSystem/: CMakeLists.txt
src/tests/unitTestCoreSystem/tests/: threadsTest.cpp
